--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,4 @@
+<%=flash[:alert]%>
 <%= form_for @user, :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group">
     <%= f.label :email, :class => 'control-label' %>
