--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,7 @@
 <%- model_class = User -%>
 <div class="page-header">
+	<%=flash[:alert]%>
+
   <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human %></h1>
 </div>
 <%= render :partial => 'form' %>
