--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,4 +1,10 @@
 <%= form_for @book, :html => { :class => 'form-horizontal' } do |f| %>
+ <% if notice %>
+    <p class="notice"><%= notice %></p>
+<% end %>
+ <% if alert %>
+    <p class="alert"><%= alert %></p>
+<% end %>
   <div class="control-group">
     <%= f.label :title, :class => 'control-label' %>
     <div class="controls">
