--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,11 @@
 	<%= stylesheet_link_tag    "application", :media => "all" %>
 		<%= javascript_include_tag "application" %>
 		<%= csrf_meta_tags %>
+<style>
+
+</style>
 </head>
 <body>
-
-<%= yield %>
 <div id="user_nav" style="float: right;">
 						  <% if user_signed_in? %>
 						    Signed in as <%= current_user.email %>. Not you?
@@ -17,5 +18,7 @@
 						    <%= link_to "Sign up", new_user_registration_path %> or <%= link_to "sign in", new_user_session_path %>
 						  <% end %>
 </div>
+<%= yield %>
+
 </body>
 </html>
